--- a/LoginFlow/LoginFlow/Controllers/Base.lproj/Main.storyboard
+++ b/LoginFlow/LoginFlow/Controllers/Base.lproj/Main.storyboard
@@ -393,6 +393,7 @@
                         <outlet property="loginButton" destination="fxH-ht-ie8" id="NCG-xQ-fgX"/>
                         <outlet property="loginWithGoogle" destination="a7X-KI-2mM" id="gs1-iH-BR2"/>
                         <outlet property="password" destination="6oJ-ha-do1" id="umI-7r-UpM"/>
+                        <outlet property="rememberMeButton" destination="bpb-Jh-XgK" id="qBB-p0-88P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SlZ-A1-f4N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -402,7 +403,7 @@
         <!--View Controller-->
         <scene sceneID="jyH-6q-hwr">
             <objects>
-                <viewController id="p7O-AQ-JYH" customClass="OTPViewController" customModule="LoginFlow" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OTPViewController" id="p7O-AQ-JYH" customClass="OTPViewController" customModule="LoginFlow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DPr-s8-TnU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -432,7 +433,7 @@
                                                 <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UwJ-qt-U5t" customClass="AEOTPTextField" customModule="AEOTPTextField">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UwJ-qt-U5t" customClass="AEOTPTextField" customModule="AEOTPTextField">
                                                 <rect key="frame" x="20" y="350.5" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="iWY-J9-oIp"/>
@@ -441,11 +442,11 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRZ-se-fTJ">
-                                                <rect key="frame" x="97" y="460.5" width="220" height="60"/>
+                                                <rect key="frame" x="107" y="460.5" width="200" height="60"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.52549019610000003" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="5qb-PC-ooa"/>
-                                                    <constraint firstAttribute="width" constant="220" id="Jvp-eb-I1E"/>
+                                                    <constraint firstAttribute="width" constant="200" id="Jvp-eb-I1E"/>
                                                 </constraints>
                                                 <color key="tintColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Button"/>
@@ -453,23 +454,33 @@
                                                     <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="19"/>
                                                 </buttonConfiguration>
                                                 <connections>
+                                                    <action selector="confirmLogin:" destination="p7O-AQ-JYH" eventType="touchUpInside" id="tv6-ai-Hfc"/>
                                                     <action selector="continueLogin:" destination="R5d-FT-UGS" eventType="touchUpInside" id="0CV-1g-hXg"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAS-Mm-Cqa">
-                                                <rect key="frame" x="137.5" y="545.5" width="139" height="38"/>
+                                                <rect key="frame" x="140.5" y="545.5" width="133" height="38"/>
                                                 <color key="tintColor" red="0.96078431369999995" green="0.52549019610000003" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Resend OTP">
-                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="generateOTP:" destination="R5d-FT-UGS" eventType="touchUpInside" id="VLY-bx-0Ri"/>
+                                                    <action selector="resendOTP:" destination="p7O-AQ-JYH" eventType="touchUpInside" id="xDk-x0-aIa"/>
                                                 </connections>
                                             </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oNd-j4-dus">
+                                                <rect key="frame" x="150.5" y="575.5" width="113" height="1.5"/>
+                                                <color key="backgroundColor" red="0.96078431369999995" green="0.52549019610000003" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1.5" id="wrb-ic-ang"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="oNd-j4-dus" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="2bd-qG-x0Y"/>
                                             <constraint firstItem="Tbi-uZ-cAA" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="7Az-ct-zBy"/>
                                             <constraint firstItem="mAS-Mm-Cqa" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="AvQ-FL-t30"/>
                                             <constraint firstItem="UwJ-qt-U5t" firstAttribute="top" secondItem="KzA-4P-Z4D" secondAttribute="bottom" constant="25" id="D4h-hf-o5U"/>
@@ -480,7 +491,9 @@
                                             <constraint firstItem="JD8-Gc-SsN" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="fdS-An-TkH"/>
                                             <constraint firstAttribute="trailing" secondItem="UwJ-qt-U5t" secondAttribute="trailing" constant="20" id="fga-Je-IJh"/>
                                             <constraint firstItem="KzA-4P-Z4D" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="gMr-A9-SkG"/>
+                                            <constraint firstItem="oNd-j4-dus" firstAttribute="width" secondItem="mAS-Mm-Cqa" secondAttribute="width" multiplier="0.85" id="hSe-hw-f2n"/>
                                             <constraint firstAttribute="bottom" secondItem="mAS-Mm-Cqa" secondAttribute="bottom" constant="40" id="kFq-1y-Ht2"/>
+                                            <constraint firstItem="oNd-j4-dus" firstAttribute="top" secondItem="mAS-Mm-Cqa" secondAttribute="bottom" constant="-8" id="teQ-fE-jsS"/>
                                             <constraint firstItem="sRZ-se-fTJ" firstAttribute="top" secondItem="UwJ-qt-U5t" secondAttribute="bottom" constant="60" id="yZI-Wh-DiO"/>
                                             <constraint firstItem="UwJ-qt-U5t" firstAttribute="leading" secondItem="wTg-R2-5YO" secondAttribute="leading" constant="20" id="ymx-hk-uIN"/>
                                             <constraint firstItem="sRZ-se-fTJ" firstAttribute="centerX" secondItem="wTg-R2-5YO" secondAttribute="centerX" id="ysU-ej-gos"/>
@@ -510,6 +523,7 @@
                     <size key="freeformSize" width="414" height="1000"/>
                     <connections>
                         <outlet property="OTP" destination="UwJ-qt-U5t" id="wzd-c6-yps"/>
+                        <outlet property="confirmButton" destination="sRZ-se-fTJ" id="FoI-a2-tew"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mO1-jY-Dsa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
