--- a/LoginFlow/LoginFlow/Controllers/Base.lproj/Main.storyboard
+++ b/LoginFlow/LoginFlow/Controllers/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kzd-2T-xCj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,10 +8,93 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Dashboard View Controller-->
+        <scene sceneID="zcz-3h-4mf">
+            <objects>
+                <viewController storyboardIdentifier="DashboardViewController" id="CST-35-r7W" customClass="DashboardViewController" customModule="LoginFlow" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KnR-DW-Iuu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mUH-eh-uBW">
+                                <rect key="frame" x="82" y="164.5" width="250" height="249"/>
+                                <color key="tintColor" red="0.96078431369999995" green="0.52549019610000003" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="gQS-QQ-gfI"/>
+                                    <constraint firstAttribute="width" constant="250" id="lHf-em-Wci"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey there" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="duq-Oa-0yh">
+                                <rect key="frame" x="157" y="422" width="100" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAe-Cl-GSc">
+                                <rect key="frame" x="207" y="461" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhL-Rn-ZzQ">
+                                <rect key="frame" x="30" y="734.5" width="354" height="50"/>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.52549019610000003" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="C3N-jv-Pop"/>
+                                </constraints>
+                                <color key="tintColor" red="0.91764705879999997" green="0.91372549020000005" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Get started">
+                                    <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="getStartedAction:" destination="CST-35-r7W" eventType="touchUpInside" id="bdT-Jc-cLj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MSV-hj-Hi8">
+                                <rect key="frame" x="30" y="804.5" width="354" height="37.5"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Log Out">
+                                    <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="logoutAction:" destination="CST-35-r7W" eventType="touchUpInside" id="VZ3-Bc-VFV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="aFg-SU-LB2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mUH-eh-uBW" firstAttribute="top" secondItem="aFg-SU-LB2" secondAttribute="top" constant="120" id="2U9-tQ-RR4"/>
+                            <constraint firstItem="MSV-hj-Hi8" firstAttribute="top" secondItem="dhL-Rn-ZzQ" secondAttribute="bottom" constant="20" id="4KX-co-chq"/>
+                            <constraint firstItem="XAe-Cl-GSc" firstAttribute="centerX" secondItem="KnR-DW-Iuu" secondAttribute="centerX" id="6zb-hv-T4A"/>
+                            <constraint firstItem="duq-Oa-0yh" firstAttribute="centerX" secondItem="KnR-DW-Iuu" secondAttribute="centerX" id="9ss-TH-K1A"/>
+                            <constraint firstItem="aFg-SU-LB2" firstAttribute="bottom" secondItem="MSV-hj-Hi8" secondAttribute="bottom" constant="20" id="NKF-eH-80d"/>
+                            <constraint firstItem="aFg-SU-LB2" firstAttribute="trailing" secondItem="MSV-hj-Hi8" secondAttribute="trailing" constant="30" id="foo-dJ-RwB"/>
+                            <constraint firstItem="aFg-SU-LB2" firstAttribute="trailing" secondItem="dhL-Rn-ZzQ" secondAttribute="trailing" constant="30" id="gMO-Hh-gY3"/>
+                            <constraint firstItem="XAe-Cl-GSc" firstAttribute="top" secondItem="duq-Oa-0yh" secondAttribute="bottom" constant="10" id="s2e-AQ-FId"/>
+                            <constraint firstItem="dhL-Rn-ZzQ" firstAttribute="leading" secondItem="aFg-SU-LB2" secondAttribute="leading" constant="30" id="tC2-s2-Tan"/>
+                            <constraint firstItem="MSV-hj-Hi8" firstAttribute="leading" secondItem="aFg-SU-LB2" secondAttribute="leading" constant="30" id="uJA-QZ-9vR"/>
+                            <constraint firstItem="mUH-eh-uBW" firstAttribute="centerX" secondItem="KnR-DW-Iuu" secondAttribute="centerX" id="uVa-i4-aH8"/>
+                            <constraint firstItem="duq-Oa-0yh" firstAttribute="top" secondItem="mUH-eh-uBW" secondAttribute="bottom" constant="8" symbolic="YES" id="zAn-by-QR6"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="x1R-Dw-7g6"/>
+                    <connections>
+                        <outlet property="getStartedButton" destination="dhL-Rn-ZzQ" id="mU9-CI-iOG"/>
+                        <outlet property="logoutButton" destination="MSV-hj-Hi8" id="2UC-HA-UBo"/>
+                        <outlet property="username" destination="XAe-Cl-GSc" id="zT1-WF-Phm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VBA-EB-yth" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="963.76811594202911" y="40.848214285714285"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoginFlow" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="LoginFlow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -173,7 +256,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1013.0434782608696" y="63.616071428571423"/>
+            <point key="canvasLocation" x="2833.3333333333335" y="63.616071428571423"/>
         </scene>
         <!--Password View Controller-->
         <scene sceneID="Htr-KV-D9L">
@@ -398,7 +481,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SlZ-A1-f4N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1797.1014492753625" y="63.616071428571423"/>
+            <point key="canvasLocation" x="3617.3913043478265" y="63.616071428571423"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="jyH-6q-hwr">
@@ -528,12 +611,30 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mO1-jY-Dsa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2505.7971014492755" y="63.616071428571423"/>
+            <point key="canvasLocation" x="4326.086956521739" y="63.616071428571423"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="z3E-95-Ehg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="kzd-2T-xCj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MCJ-nG-t6r">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="CST-35-r7W" kind="relationship" relationship="rootViewController" id="RIn-15-dXd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rpT-Sg-uvi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53.623188405797109" y="40.848214285714285"/>
         </scene>
     </scenes>
     <resources>
         <image name="icons8-google-24" width="24" height="24"/>
         <image name="logo1" width="192" height="150"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="square" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
